# indian-equity-investor

./: .env.example  .gitignore  CLAUDE.md  README.md  investor.db  pyproject.toml
.claude/: launch.json  settings.json
.claude/hooks/: guard-db.sh  lint-on-edit.sh  show-portfolio-after-trade.sh  test-on-edit.sh  validate-portfolio-write.sh
analysis/reports/: ADANIPORTS_2026-05-15.md  ADANIPORTS_2026-05-16.md  ADANIPORTS_2026-05-16_portfolio_review.md  ADANIPORTS_2026-05-18.md  ADANIPORTS_2026-05-25.md  ADANIPOWER_2026-05-18.md  ADANIPOWER_2026-05-25.md  ARE&M_2026-05-16_portfolio_review.md  BAJAJ-AUTO_2026-05-15.md  BAJAJ-AUTO_2026-05-16.md  BAJFINANCE_2026-05-16_portfolio_review.md  BAJFINANCE_2026-05-18.md  BAJFINANCE_2026-05-25.md  BANCOINDIA_2026-05-16_portfolio_review.md  BANKBARODA_2026-05-25.md  BEL_2026-05-16.md  BEL_2026-05-16_portfolio_review.md  BHARTIARTL_2026-05-15.md  BOSCHLTD_2026-05-25.md  BPCL_2026-05-25.md  CANHLIFE_2026-05-16_portfolio_review.md  CAPLIPOINT_2026-05-16_portfolio_review.md  CDSL_2026-05-16_portfolio_review.md  CGPOWER_2026-05-18.md  CGPOWER_2026-05-25.md  COALINDIA_2026-05-15.md  COALINDIA_2026-05-16.md  COALINDIA_2026-05-18.md  COALINDIA_2026-05-25.md  CRAMC_2026-05-16_portfolio_review.md  CUMMINSIND_2026-05-18.md  CUMMINSIND_2026-05-25.md  DIVISLAB_2026-05-15.md  (+35 more)
config/: nifty50_fallback.json
docs/: diagrams.html
framework/: CHANGELOG.md  long_term_investing_context_v2.md
portfolio/: holdings.md
skill/: SKILL.md
src/: __init__.py  config.py  logging_config.py  main.py  models.py
tests/: __init__.py  conftest.py
(+75 files in other folders)
